tests/base/invalid/Function_CompileFail_2.whiley
import whiley.lang.*:*

void f(int x):
    this.out.println()"FIRST"

void f(int x):
    this.out.println()"SECOND"

void System::main([string] args):
    this.out.println()"NOUT"